# automate-mail-answer

./: .gitignore  .sample.env  LICENSE  README.md  mail_utils.py  pyproject.toml  sample.envvar.py
.github/workflows/: register.yaml
src/: mail_utils.py  main.py
